--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.8", features = ["derive"] }
 toml = "0.7.5"
+serde = { version = "1.0", features = ["derive"] }
 anstyle = "1.0.1"
